--- a/ducnhung/src/main/resources/templates/index.html
+++ b/ducnhung/src/main/resources/templates/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Thiệp mời &mdash; NHUNG-DUC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet'
+          type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
     <!-- Animate.css -->
     <link rel="stylesheet" th:href="@{/css/animate.css}">
@@ -25,7 +26,12 @@
 
     <!-- Modernizr JS -->
     <script th:src="@{/js/modernizr-2.6.2.min.js}"></script>
-
+    <style th:inline="text">
+        .back-head {
+            background: url([[@{/images/LEO04805.jpg}]]) no-repeat fixed center;
+            background-size: 1920px 1080px;
+        }
+    </style>
 </head>
 <body>
 <audio>
@@ -44,8 +50,8 @@
             </div>
         </div>
     </nav>
-
-    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/LEO04805.jpg);" data-stellar-background-ratio="0.5">
+    <!--    style="background-image:url(images/LEO04805.jpg);"-->
+    <header id="fh5co-header" class="fh5co-cover back-head" role="banner" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
@@ -67,7 +73,8 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
                     <h2>Hello!</h2>
-                    <p>Đám cưới của chúng mình sẽ trọn vẹn hơn khi có thêm lời chúc phúc và sự hiện diện của các bạn. Sự hiện diện của các bạn là vinh hạnh của chúng mình <3</p>
+                    <p>Đám cưới của chúng mình sẽ trọn vẹn hơn khi có thêm lời chúc phúc và sự hiện diện của các bạn. Sự
+                        hiện diện của các bạn là vinh hạnh của chúng mình <3</p>
 
                 </div>
             </div>
@@ -78,7 +85,9 @@
                     </div>
                     <div class="desc-groom">
                         <h3>Bui Duc</h3>
-                        <p>Chúng tôi cũng trải qua nhiều biến cố trong tình cảm. Quyết định đến với nhau là kết quả cả hai chúng tôi đã phấn đấu, thay đổi và giúp đỡ lần nhau. Và... Chúng tôi đã về chung một nhà rồi này ! 💝💝💝️</p>
+                        <p>Chúng tôi cũng trải qua nhiều biến cố trong tình cảm. Quyết định đến với nhau là kết quả cả
+                            hai chúng tôi đã phấn đấu, thay đổi và giúp đỡ lần nhau. Và... Chúng tôi đã về chung một nhà
+                            rồi này ! 💝💝💝️</p>
                     </div>
                 </div>
                 <p class="heart text-center"><i class="icon-heart2"></i></p>
@@ -88,7 +97,9 @@
                     </div>
                     <div class="desc-bride">
                         <h3>Le Nhung</h3>
-                        <p>"Không thể tin được..." đó là câu nói tôi hay nói từ khi chúng tôi bắt đâu yêu và giờ thì... chúng tôi kết hôn rồi. Có lẽ chúng tôi nên kết thúc một tình bạn để gọi nhau hai tiếng "vợ chồng". Và rồi..."Chốt thôi!" 💖💖💖</p>
+                        <p>"Không thể tin được..." đó là câu nói tôi hay nói từ khi chúng tôi bắt đâu yêu và giờ thì...
+                            chúng tôi kết hôn rồi. Có lẽ chúng tôi nên kết thúc một tình bạn để gọi nhau hai tiếng "vợ
+                            chồng". Và rồi..."Chốt thôi!" 💖💖💖</p>
                     </div>
                 </div>
             </div>
@@ -248,7 +259,8 @@
             <div class="row animate-box">
                 <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                     <h2>We Offer Services</h2>
-                    <p>Cảm ơn bạn vì đã trở thành một phần quan trọng trong ngày đặc biệt của chúng mình! Đám cưới của chúng mình chắc chắn sẽ kém vui đi rất nhiều nếu thiếu sự hiện diện của bạn.</p>
+                    <p>Cảm ơn bạn vì đã trở thành một phần quan trọng trong ngày đặc biệt của chúng mình! Đám cưới của
+                        chúng mình chắc chắn sẽ kém vui đi rất nhiều nếu thiếu sự hiện diện của bạn.</p>
                 </div>
             </div>
 
@@ -260,7 +272,7 @@
 						</span>
                         <div class="feature-copy">
                             <h3>Muốn liên hệ với chúng mình có thể gọi qua số này nha.</h3>
-                            <p>Bui Duc: 0987120758  -  Le Nhung: 0964500146</p>
+                            <p>Bui Duc: 0987120758 - Le Nhung: 0964500146</p>
                         </div>
                     </div>
 
@@ -269,7 +281,9 @@
 							<i class="icon-image"></i>
 						</span>
                         <div class="feature-copy">
-                            <h3> <a href="https://drive.google.com/drive/folders/1mRKyFwqPkAEH9fv3QX-l8GrQ07KM4I1c?usp=share_link" target="_blank">Photoshoot</a> </h3>
+                            <h3>
+                                <a href="https://drive.google.com/drive/folders/1mRKyFwqPkAEH9fv3QX-l8GrQ07KM4I1c?usp=share_link"
+                                   target="_blank">Photoshoot</a></h3>
                             <p>Nếu bạn muốn xem thêm ảnh thì có thể click vào chữ "Photoshoot" bên trên nha. </p>
                         </div>
                     </div>
@@ -279,8 +293,11 @@
 							<i class="icon-video"></i>
 						</span>
                         <div class="feature-copy">
-                            <h3><a href="https://drive.google.com/file/d/1AHXddKVey_FwQl1XAb3BRA33srCA8u9L/view?usp=share_link" target="_blank">Video Editing</a></h3>
-                            <p>Còn nếu muốn xem video đầy đủ thì có thể click vào chữ "Video Editing" cũng ở bên trên luôn. </p>
+                            <h3>
+                                <a href="https://drive.google.com/file/d/1AHXddKVey_FwQl1XAb3BRA33srCA8u9L/view?usp=share_link"
+                                   target="_blank">Video Editing</a></h3>
+                            <p>Còn nếu muốn xem video đầy đủ thì có thể click vào chữ "Video Editing" cũng ở bên trên
+                                luôn. </p>
                         </div>
                     </div>
 
@@ -305,7 +322,8 @@
             <div class="row animate-box">
                 <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                     <h2>Thank you!</h2>
-                    <p>Bọn mình rất muốn được chụp chung với bạn những tấm hình kỷ niệm vì vậy hãy đến sớm hơn một chút bạn yêu nhé. Nhớ đến nha!!!</p>
+                    <p>Bọn mình rất muốn được chụp chung với bạn những tấm hình kỷ niệm vì vậy hãy đến sớm hơn một chút
+                        bạn yêu nhé. Nhớ đến nha!!!</p>
                 </div>
             </div>
         </div>
