--- a/ducnhung/src/main/resources/templates/index.html
+++ b/ducnhung/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
     <script th:src="@{/js/modernizr-2.6.2.min.js}"></script>
     <style th:inline="text">
         .back-head {
-            background: url([[@{/images/LEO04805.jpg}]]) no-repeat fixed center;
+            background: url([[@{/images/LEO04805.JPG}]]) no-repeat fixed center;
             background-size: 1920px 1080px;
         }
     </style>
@@ -106,7 +106,7 @@
         </div>
     </div>
 
-    <div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/LEO03947.jpg);">
+    <div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/LEO03947.JPG);">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
@@ -187,19 +187,19 @@
                                     <span class="date">Chủ nhật, Ngày 14 Tháng 5 Năm 2023</span>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>Địa chỉ: Thôn Lường, Xã Hoà Tiến, Huyện Hưng Hà, Tỉnh Thái Bình.</p>
+                                    <p>Địa chỉ: Thôn Tây Nha, Xã Tiến Đức, Huyện Hưng Hà, Tỉnh Thái Bình.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="animate-box">
-                            <div class="timeline-badge" style="background-image:url(images/LEO04805.jpg);"></div>
+                            <div class="timeline-badge" style="background-image:url(images/LEO03947.JPG);"></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h3 class="timeline-title">Lễ Thành Hôn</h3>
                                     <span class="date">Chủ nhật, Ngày 14 Tháng 5 Năm 2023</span>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>Địa chỉ: Thôn Tây Nha, Xã Tiến Đức, Huyện Hưng Hà, Tỉnh Thái Bình.</p>
+                                    <p>Địa chỉ: Thôn Lường, Xã Hoà Tiến, Huyện Hưng Hà, Tỉnh Thái Bình.</p>
                                 </div>
                             </div>
                         </li>
